# obesity

./: .gitignore  Join health stats with altitude.ipynb  MEDICUS_INSTALL.md  MEDICUS_README.md  OBESITY_ALTITUDE_REVIEW.md  README.md  altitude.sparql  altitudes.csv  analysis-charts.twb  aust_health_tracker_data_lga.xlsx  chart-ready-data.csv  pyproject.toml
.claude/skills/med-literature/: SKILL.md  examples.md  subagent-instructions.md
.claude/skills/med-literature/scripts/: citation_analysis.py  classify_citations.py  litdb.py  pubmed_search.py  trial_lookup.py
