[project]
name = "medicus"
version = "0.1.0"
description = "Medical literature analysis with recursive subagents"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.80",
    "requests>=2.28",
    "lxml>=4.9",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".claude"]
